monitoring-ingress-backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: monitoring
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2025-09-04T22:10:56Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: monitoring-ingress
  namespace: monitoring
  resourceVersion: "888003"
  uid: 04f2ba82-d380-4c4d-bd7b-19c2d5234495
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.chat.canepro.me
    http:
      paths:
      - backend:
          service:
            name: grafana-service
            port:
              name: grafana
        path: /grafana
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 4.250.169.133
