temp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: production-cert-issuer
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"production-cert-issuer","nginx.ingress.kubernetes.io/ssl-redirect":"true"},"name":"grafana-new-domain","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana.canepro.me","http":{"paths":[{"backend":{"service":{"name":"monitoring-grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["grafana.canepro.me"],"secretName [...]
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  creationTimestamp: "2025-09-23T16:40:25Z"
  generation: 1
  name: monitoring-ingress
  namespace: monitoring
  resourceVersion: "12967404"
  uid: 9eea3dba-bf3e-43ca-8366-071263bd8dbb
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.canepro.me
    http:
      paths:
      - backend:
          service:
            name: monitoring-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.canepro.me
    secretName: grafana-new-tls
status:
  loadBalancer:
    ingress:
    - ip: 4.250.169.133
